--- a/app/views/dependencias/index.html.erb
+++ b/app/views/dependencias/index.html.erb
@@ -24,7 +24,7 @@
 
           <% @dependencias.each do |dependencia| %>
           <tr>
-            <td><%= dependencia.nombre.upcase %></td>
+            <td class="text-capitalize"><%= dependencia.nombre %></td>
 <% if !current_usuario.has_role?:regular %>
             <td class="actions">
               <%= render 'layouts/actions', x: Dependencia, y: edit_dependencia_path(dependencia), z: dependencia %>
